<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.encryptorcode.abhay.infinitycalc.activities.HomeActivity"
    tools:showIn="@layout/app_bar_home"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorBackground"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/shadow_width"
                android:alpha="0.5"
                android:rotation="180"
                android:src="@drawable/horizontal_shadow"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/expression_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:hint="@string/calculator_expression_text"
                android:scrollbars="vertical"
                android:textColor="?attr/textLight"
                android:textIsSelectable="true"
                android:textSize="@dimen/calculator_expression_text_size" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_margin="5dp"
                android:gravity="end"
                android:hint="@string/calculator_result_text"
                android:scrollbars="vertical"
                android:textColor="?attr/textLight"
                android:textIsSelectable="true"
                android:textSize="@dimen/calculator_expression_text_size" />

            <LinearLayout
                android:id="@+id/infinity_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:alpha="0.9"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infinity"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:textSize="72sp"
                    android:textColor="?attr/textDark"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/shadow_width"
                android:alpha="0.5"
                android:rotation="180"
                android:src="@drawable/horizontal_shadow"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <include layout="@layout/default_keyboard" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/infinity_blink_view"
        android:visibility="gone">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.9"
            android:src="?attr/textLight"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:src="@drawable/white_logo"/>
    </FrameLayout>
</FrameLayout>
